--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
 a {
     text-decoration: none;
     color: #F9FAF8;
+    font-size: 20px;
 }
 
 ul {
@@ -18,13 +19,14 @@ ul {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    gap: 16px;
+    gap: 30px;
     padding: 0;
     margin: 0;
 }
 
 h1 {
     font-size: 48px;
+    margin: 0;
 }
 
 .header {
@@ -33,8 +35,8 @@ h1 {
     justify-content: space-between;
     align-items: center;
     color: #F9FAF8;
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 250px;
+    padding-right: 250px;
     padding-top: 40px;
     padding-bottom: 30px;
 }
@@ -47,29 +49,31 @@ h1 {
     display: flex;
     background-color: #1F2937;
     color: #F9FAF8;
-    justify-content: space-between;
-    padding-left: 150px;
-    padding-right: 150px;
+    justify-content: space-around;
+    padding-left: 350px;
+    padding-right: 350px;
     padding-top: 80px;
     padding-bottom: 160px;
     width: auto;
     margin: 0px;
-    gap: 36px;
+    gap: 30px;
 }
 
 .intro {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: flex-start;
+    width: 400px;
+    gap: 20px
 }
 
 .image {
     background-color: #F9FAF8;
     color: #1F2937;
     display: flex;
-    width: 600px;
-    height: 300px;
+    width: 550px;
+    height: 320px;
     align-items: center;
     justify-content: center;
     flex-shrink: 0;
@@ -77,9 +81,9 @@ h1 {
 
 .information {
     display: flex;
-    margin: 40px 10px;
-    padding: 10px 180px;
-    gap: 50px;
+    margin: 50px 200px 100px 200px;
+    padding: 0px;
+    gap: 80px;
 }
 
 .info {
@@ -98,6 +102,11 @@ h1 {
     margin-bottom: 12px;
 }
 
+.action {
+    display: flex;
+    flex-direction: column;
+}
+
 .section2 {
     display: flex;
     flex-direction: column;
@@ -106,44 +115,54 @@ h1 {
 }
 
 .smallcontainer {
+    display: flex;
+    justify-content: space-around;
     background-color: #3882F6;
     border-radius: 15px;
-    padding: 40px;
-    margin: 80px 160px;
+    padding: 40px 200px;
+    margin: 80px 300px;
+}
+
+p, .text {
+    font-size: 20px;
 }
 
 p {
     color: #F9FAF8;
-    font-size: 17px;
+    margin: 10px 0px 0px 0px;
+}
+
+.text {
+    color: #1F2937;
 }
 
 .quote {
     display: flex;
     background-color: #e5e7eb;
     text-align: center;
-    padding-left: 200px;
-    padding-right: 200px;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding: 100px 250px;
 }
 
-h2 {
+h3 {
     font-size: 36px;
     font-style: italic;
     font-weight: 100;
 }
 
-h3 {
+h2 {
    font-size: 36px;
    font-weight: bolder; 
    color: #1F2937;
+   margin: 50px 0px 0px 0px;
    
 }
 
 h4 {
-    font-size: 20px;
+    font-size: 26px;
     color: #F9FAF8;
+    margin: 0;
 }
+
 
 button {
     display: flex;
@@ -151,8 +170,9 @@ button {
     justify-content: center;
     align-items: center;
     border-radius: 5px;
-    padding: 10px 30px;
+    padding: 10px 40px;
     width: auto;
+    font-size: 20px;
 }
 
 button.button1 {
@@ -164,23 +184,24 @@ button.button2 {
     background: none;
 }
 
+.button2container {
+    display: flex;
+    align-items: end;
+    justify-content: center;
+}
+
 .footer {
     display: flex;
     background-color: #1F2937;
     color: #F9FAF8;
     justify-content: center;
     align-items: flex-end;
-    padding: 16px;
+    padding: 50px;
+    font-size: 20px;
     flex: 2;
-    height: 300px;
     
 }
 
 .rightlinks {
     display: flex;
-}
-
-
-* {
-    border: 1px solid red;
 }
